@@ -1548,6 +1548,7 @@ is a good idea, but see SB-SYS re. blurring of boundaries."
                "%RAW-INSTANCE-ATOMIC-INCF/WORD"
                "%RAW-INSTANCE-CAS/WORD"
                "%RAW-INSTANCE-REF/WORD" "%RAW-INSTANCE-SET/WORD"
+               "%RAW-INSTANCE-REF/SIGNED-WORD" "%RAW-INSTANCE-SET/SIGNED-WORD"
                "%RAW-INSTANCE-REF/SINGLE" "%RAW-INSTANCE-SET/SINGLE"
                "%RAW-INSTANCE-REF/DOUBLE" "%RAW-INSTANCE-SET/DOUBLE"
                "%RAW-INSTANCE-REF/COMPLEX-SINGLE"
