@@ -3,6 +3,8 @@
 changes relative to sbcl-1.3.10:
   * enhancement: TRACE ... :REPORT {TRACE,NIL} now work as advertised in the
     documentation string (based on patch by Patrick Stein)
+  * enhancement: support unboxed signed-word structure slots on x86, x86-64
+    and ARM64. (lp#377616)
 
 changes in sbcl-1.3.10 relative to sbcl-1.3.9:
   * enhancement: more compact low-level error signaling code
